--- a/_config_production.yml
+++ b/_config_production.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sass Conf 2015
+title: Notes from Sass Conf 2015
 
 description: > # this means to ignore newlines until "baseurl:"
   Notes from Sass Conf 2015
